--- a/server/package.json
+++ b/server/package.json
@@ -12,22 +12,18 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server-lambda": "^2.8.1",
-    "aws-sdk": "^2.413.0",
     "dotenv": "^8.0.0",
-    "graphql": "^14.1.1",
-    "knex": "^0.16.5",
-    "lodash.merge": "^4.6.1",
-    "pg": "^7.11.0",
-    "uuid": "^3.3.2"
+    "graphql": "^14.4.2"
   },
   "devDependencies": {
-    "eslint": "^5.13.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
+    "eslint": "^6.1.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "serverless-offline": "^4.4.2",
-    "serverless-plugin-warmup": "^4.3.3-rc.1"
-  }
+    "serverless-offline": "^5.10.1",
+    "serverless-plugin-warmup": "^4.7.0-rc.1"
+  },
+  "type": "module"
 }
