--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "sls offline -s dev --cacheInvalidationRegex 'node_modules'",
+    "start": "sls offline -s dev",
     "alpha": "sls deploy -s alpha --aws-profile advito",
     "beta": "sls deploy -s beta --aws-profile advito",
     "dev": "sls deploy -s dev --aws-profile advito",
@@ -13,9 +13,14 @@
   "dependencies": {
     "apollo-server-lambda": "^2.8.1",
     "dotenv": "^8.0.0",
-    "graphql": "^14.4.2"
+    "graphql": "^14.4.2",
+    "source-map-support": "^0.5.13"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-source-map-support": "^2.1.1",
     "eslint": "^6.1.0",
     "eslint-config-standard": "^13.0.1",
     "eslint-plugin-import": "^2.18.2",
@@ -23,7 +28,10 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "serverless-offline": "^5.10.1",
-    "serverless-plugin-warmup": "^4.7.0-rc.1"
+    "serverless-plugin-warmup": "^4.7.0-rc.1",
+    "serverless-webpack": "^5.3.1",
+    "webpack": "^4.39.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "type": "module"
 }
