--- a/server/serverless.yml
+++ b/server/serverless.yml
@@ -46,7 +46,9 @@ custom:
     port: 4000
   webpack:
       webpackConfig: ./webpack.config.js
-      includeModules: true
+      includeModules:
+        forceInclude:
+          - pg
 
 plugins:
   - serverless-webpack
