--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server-lambda": "^2.8.1",
+    "aws-sdk": "^2.514.0",
     "dotenv": "^8.0.0",
     "graphql": "^14.4.2",
     "source-map-support": "^0.5.13"
