--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,11 @@
     "aws-sdk": "^2.514.0",
     "dotenv": "^8.0.0",
     "graphql": "^14.4.2",
-    "source-map-support": "^0.5.13"
+    "source-map-support": "^0.5.13",
+    "knex": "^0.19.2",
+    "lodash.merge": "^4.6.2",
+    "objection": "^1.6.9",
+    "pg": "^7.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -32,6 +36,5 @@
     "serverless-webpack": "^5.3.1",
     "webpack": "^4.39.2",
     "webpack-node-externals": "^1.7.2"
-  },
-  "type": "module"
+  }
 }
