--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "cd ./server && yarn start",
     "alpha": "cd ./server && yarn alpha",
     "beta": "cd ./server && yarn beta",
-    "dev": "cd ./server && yarn dev"
+    "dev": "cd ./server && yarn dev",
+    "prod": "cd ./server && yarn prod"
   },
   "repository": {
     "type": "git",
