--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "start": "sls offline -s dev",
     "alpha": "sls deploy -s alpha --aws-profile advito",
     "beta": "sls deploy -s beta --aws-profile advito",
-    "dev": "sls deploy -s dev --aws-profile advito"
+    "dev": "sls deploy -s dev --aws-profile advito",
+    "prod": "sls deploy -s dev --aws-profile advito"
   },
   "license": "MIT",
   "dependencies": {
