--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "alpha": "sls deploy -s alpha --aws-profile advito",
     "beta": "sls deploy -s beta --aws-profile advito",
     "dev": "sls deploy -s dev --aws-profile advito",
-    "prod": "sls deploy -s dev --aws-profile advito"
+    "prod": "sls deploy -s prod --aws-profile advito"
   },
   "license": "MIT",
   "dependencies": {
