--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@apollo/react-hooks": "^3.1.2",
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.8",
+    "moment-timezone": "^0.5.26",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
