--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.2",
+    "antd": "^3.23.6",
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.8",
     "moment-timezone": "^0.5.26",
