--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
     "@apollo/react-hooks": "^3.1.2",
     "antd": "^3.23.6",
     "apollo-boost": "^0.4.4",
+    "babel-plugin-import": "^1.12.2",
+    "customize-cra": "^0.8.0",
     "graphql": "^14.5.8",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "moment-timezone": "^0.5.26",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
+    "react-app-rewired": "^2.1.3",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "server": "cd ./server && yarn start",
     "alpha": "cd ./server && yarn alpha",
     "beta": "cd ./server && yarn beta",
