--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.5",
     "antd": "^3.23.6",
     "apollo-boost": "^0.4.4",
     "babel-plugin-import": "^1.12.2",
