--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "less-loader": "^5.0.0",
     "moment-timezone": "^0.5.26",
     "prop-types": "^15.7.2",
+    "query-string": "^6.8.3",
     "react": "^16.10.2",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.10.2",
@@ -30,6 +31,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
+    "deploy:dev": "REACT_APP_STAGE=dev react-app-rewired build && aws s3 sync  ./build s3://dev.boostlabs/360-analytics/ --acl public-read --profile boost",
     "server": "cd ./server && yarn start",
     "alpha": "cd ./server && yarn alpha",
     "beta": "cd ./server && yarn beta",
@@ -52,6 +54,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": ".",
   "devDependencies": {
     "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.0",
