Addd deployment scripts

--- a/package.json
+++ b/package.json
@@ -30,9 +30,20 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
-    "deploy:dev": "REACT_APP_STAGE=dev react-app-rewired build && aws s3 sync  ./build s3://dev.boostlabs/360-analytics/ --acl public-read --profile boost",
     "server": "cd ./server && yarn start",
+    "eject": "react-app-rewired eject",
+    "deploy:alpha": "REACT_APP_STAGE=alpha react-app-rewired build && aws s3 sync  ./build s3://alpha.boostlabs/360-analytics/ --acl public-read --profile boost",
+    "deploy:alpha:server": "cd ./server && yarn alpha",
+    "deploy:alpha:all": "yarn deploy:alpha & yarn deploy:alpha:server",
+    "deploy:beta": "REACT_APP_STAGE=beta react-app-rewired build && aws s3 sync  ./build s3://beta.boostlabs/360-analytics/ --acl public-read --profile boost",
+    "deploy:beta:server": "cd ./server && yarn beta",
+    "deploy:beta:all": "yarn deploy:beta & yarn deploy:beta:server",
+    "deploy:dev": "REACT_APP_STAGE=dev react-app-rewired build && aws s3 sync  ./build s3://dev.boostlabs/360-analytics/ --acl public-read --profile boost",
+    "deploy:dev:server": "cd ./server && yarn dev",
+    "deploy:dev:all": "yarn deploy:dev & yarn deploy:dev:server",
+    "deploy:prod": "REACT_APP_STAGE=prod react-app-rewired build && aws s3 sync  ./build s3://360-analytics-prod/ --acl public-read --profile advito",
+    "deploy:prod:server": "cd ./server && yarn prod",
+    "deploy:prod:all": "yarn deploy:prod & yarn deploy:prod:server",
     "alpha": "cd ./server && yarn alpha",
     "beta": "cd ./server && yarn beta",
     "dev": "cd ./server && yarn dev",
