--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "server": "cd ./server && yarn start",
+    "server:prod": "cd ./server && yarn start:prod",
     "eject": "react-app-rewired eject",
     "deploy:alpha": "REACT_APP_STAGE=alpha react-app-rewired build && aws s3 sync  ./build s3://alpha.boostlabs/360-analytics/ --acl public-read --profile boost",
     "deploy:alpha:server": "cd ./server && yarn alpha",
