--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "dotenv": "^8.0.0",
     "graphql": "^14.4.2",
     "knex": "^0.19.2",
-    "lodash.merge": "^4.6.2",
+    "lodash": "^4.17.15",
     "moment-timezone": "^0.5.26",
     "objection": "^1.6.9",
     "pg": "^7.12.1",
