--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql": "^14.5.8",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.15",
     "moment-timezone": "^0.5.26",
     "prop-types": "^15.7.2",
     "query-string": "^6.8.3",
