Fix deployment script

--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "deploy:prod": "REACT_APP_STAGE=prod react-app-rewired build && aws s3 sync  ./build s3://360-analytics-prod/ --acl public-read --profile advito",
     "deploy:prod:server": "cd ./server && yarn prod",
     "deploy:prod:all": "yarn deploy:prod & yarn deploy:prod:server",
-    "deploy:all:front": "yarn deploy:alpha && deploy:beta && deploy:dev && deploy:prod",
+    "deploy:all:front": "yarn deploy:alpha && yarn deploy:beta && yarn deploy:dev && yarn deploy:prod",
     "deploy:all:server": "cd ./server && yarn all",
-    "deploy:all": "yarn deploy:alpha:all && deploy:beta:all && deploy:dev:all && deploy:prod:all"
+    "deploy:all": "yarn deploy:alpha:all && yarn deploy:beta:all && yarn deploy:dev:all && yarn deploy:prod:all"
   },
   "eslintConfig": {
     "extends": "react-app"
